--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^6.0.0"
   },
-  "homepage": "https://jyoryutaro.github.io/PikuminAA"
+  "homepage": "https://trendaa.com"
 }
